--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/nodemailer": "^7.0.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -54,6 +55,7 @@
     "moment": "^2.30.1",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.10",
     "react": "^19",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19",
